--- a/CafeAndWifi/appsettings.json
+++ b/CafeAndWifi/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FrontendBaseUrl": "http://localhost:5173"
 }
